--- a/consulta.html
+++ b/consulta.html
@@ -4,44 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-
+    <link rel="icon" type="image/png" href="img/faith-institute.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Georama:wght@300&display=swap" rel="stylesheet">
+<meta name="description" content="Instituto de Ingles Online dedicado a capacitar a personas de todas las edades">
+<meta name="keywords" content="Instituto,ingles,profesores,cursos online,FCE,CAE,IELTS">
     <title>Faith Institute</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Faith Institute</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="cursos.html">Cursos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="cursosinternacionales.html">Certificados Internacionales</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="conversacion.html">Clases de Conversacion</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="consulta.html">Consulta</a>
-                  </li>
-                 
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </header>
+   <header class="header">
+      <nav class="nav">
+        <a href="#" class="logo nav-link">Faith Institute</a>
+        <button class="nav-toggle" aria-label="Abrir menú">
+          <i class="fas fa-bars"></i>
+        </button>
+        <ul class="nav-menu">
+          <li class="nav-menu-item">
+            <a href="index.html" class="nav-menu-link nav-link">Home</a>
+          </li>
+          <li class="nav-menu-item">
+            <a href="cursos.html" class="nav-menu-link nav-link">Cursos</a>
+          </li>
+         <li class="nav-menu-item">
+            <a href="certificadosinternacionales.html" class="nav-menu-link nav-link">Cert. Internacionales</a>
+          </li>
+          <li class="nav-menu-item">
+            <a href="conversacion.html" class="nav-menu-link nav-link">Conversacion</a>
+          </li>
+          <li class="nav-menu-item">
+            <a href="consulta.html" class="nav-menu-link nav-link nav-menu-link_active"
+              >Consulta</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
    <section>
     <div class="form-contacto"> 
@@ -49,10 +49,10 @@
     <h2>Si tenes dudas o queres estudiar con nosotros no dudes en consultar</h2>
        
     <form>
-        <input type="text" class="texto-formulario" placeholder="Tu Nombre">
-        <input type="email" class="texto-formulario" placeholder="Tu Email">
-        <input type="text" class="texto-formulario"placeholder="Tu celular">
-        <textarea class="texto-formulario" placeholder="Deja Tu Mensaje"></textarea>
+        <input type="text" class="texto-formulario" placeholder="Tu Nombre:">
+        <input type="email" class="texto-formulario" placeholder="Tu Email:">
+        <input type="text" class="texto-formulario"placeholder="Tu celular:">
+        <textarea class="texto-formulario" placeholder="Deja Tu Mensaje:"></textarea>
         <input type="submit" class="formulario-btn" value="Enviar">
     </form>
 </div>
@@ -64,9 +64,8 @@
 
   <div class="redes-sociales">
       <ul>
-          <li class="social-items"><a href="#"><i class="fab fa-facebook-square"></i>
-          <li class="social-items"><a href="#"><i class="fab fa-instagram-square"></i>
-          <li class="social-items"><a href="#"><i class="fab fa-twitter-square"></i>
+        <li class="social-items"><a href="https://es-la.facebook.com/"><i class="fab fa-facebook-square"></i>
+        <li class="social-items"><a href="https://www.instagram.com/?hl=es"><i class="fab fa-instagram-square"></i>
       </ul>
   </div>
   
@@ -75,9 +74,9 @@
       <ul>
         <li class="quick-items"><a href="index.html">home</a></li>
         <li class="quick-items"><a href="cursos.html">Cursos</a></li>
-        <li class="quick-items"><a href="cursosinternacionales.html">cursosinternacionales</a></li>
+        <li class="quick-items"><a href="certificadosinternacionales.html">cert.internacionales</a></li>
         <li class="quick-items"><a href="conversacion.html">conversacion</a></li>
-        <li class="quick-items"><a href="consulta.html">conversacion</a></li>
+        <li class="quick-items"><a href="consulta.html">consulta</a></li>
       </ul>
   </div>
   
@@ -87,7 +86,6 @@
   
   </div>
   </footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script defer src="index.js"></script>
 </body>
 </html>
