actualizacion con sass,responsive,seo,keywords

--- a/consulta.html
+++ b/consulta.html
@@ -81,7 +81,7 @@
   </div>
   
   <div class="mensaje-footer">
-      Knowledge is power
+    Knowledge is power - with love by <a href="https://github.com/Lean-MC">Lean-MC</a>
   </div>
   
   </div>
