--- a/conversacion.html
+++ b/conversacion.html
@@ -51,14 +51,14 @@
          <img src="img/estudiar-solo.jpg">
          <h2>Clases Solo</h2>
          <p>Clases personalizadas con el tutor en donde podran practicar el lenguaje en el tema que necesites</p>
-          <a href="consulta.html">Mas Info</a>
+          <a href="consulta.html">->Mas Info<-</a>
         </div>
 
         <div class="card2">
           <img src="img/estudiar-grupo.jpg">
           <h2>Clases en Grupo</h2>
           <p>Clases grupales ideales para equipos que quieran adentrarse al Idioma mas solicitado</p>
-           <a href="consulta.html">Mas Info</a>
+           <a href="consulta.html">->Mas Info<-</a>
          </div>
         </div>
   
@@ -84,7 +84,7 @@
       </div>
       
       <div class="mensaje-footer">
-          Knowledge is power
+        Knowledge is power - with love by <a href="https://github.com/Lean-MC">Lean-MC</a>
       </div>
       
       </div>
