--- a/cursos.html
+++ b/cursos.html
@@ -56,42 +56,42 @@
                <img src="img/bussiness.jpg">
                <h2>English for Bussines</h2>
                <p>Amplia tus posibilidades de empleo con nuestro curso!<br>Aprende a manejarte con seguridad y fluidez en el ambito laboral</p>
-               <a href="consulta.html">Mas Info</a>
+               <a href="consulta.html">->Mas Info<-</a>
           </div>
 
           <div class="card2">
                 <img src="img/interview.jpg">
                 <h2>English for Interview</h2>
                 <p>Tenes una entrevista basada en competencias?<br> Este curso es para vos! <br>Te preparamos para que puedas responder con soltura y seguridad!<br>Ofrecemos todo el material necesario!</p>
-                <a href="consulta.html">Mas Info</a>
+                <a href="consulta.html">->Mas Info<-</a>
           </div>
 
           <div class="card2">
                 <img src="img/it.jpg">
                 <h2>English for IT</h2>
                 <p>Si estas explorando el mundo IT este curso es para vos! <br>Te vamos a ayudar a mejorar tu nivel con lo que necesitas para enaltecer tu CV!</p>
-                <a href="consulta.html">Mas Info</a>
+                <a href="consulta.html">->Mas Info<-</a>
           </div>
 
           <div class="card2">
                 <img src="img/legal.jpg">
                 <h2>English legal</h2>
                 <p>Curso orientado a abogados/as,estudiantes de derechos y todo aquel que quiera adentrarse mas en el mundo de la ley internacional</p>
-                <a href="consulta.html">Mas Info</a>
+                <a href="consulta.html">->Mas Info<-</a>
           </div>
 
           <div class="card2">
                 <img src="img/presentation.jpg">
                 <h2>English for Presentation</h2>
                 <p>Orientado a preparar presentaciones en ingles laborales/academicos y oratoria oara mejorar el discurso, todo el material provisto 100% personalizados posibilidad de cursos intensivos!</p>
-                <a href="consulta.html">Mas Info</a>
+                <a href="consulta.html">->Mas Info<-</a>
           </div>
 
            <div class="card2">
                 <img src="img/marketing.jpg">
                 <h2>English for Marketing</h2>
                 <p>Hace crecer las posibilidades de tu negocio y tu profesion con nuestro curso orientado a profesionales de la publicidad y el marketing</p>
-                <a href="consulta.html">Mas Info</a>
+                <a href="consulta.html">->Mas Info<-</a>
             </div>
 
     </div>
@@ -118,7 +118,7 @@
     </div>
     
     <div class="mensaje-footer">
-        Knowledge is power
+      Knowledge is power - with love by <a href="https://github.com/Lean-MC">Lean-MC</a>
     </div>
     
     </div>
