actualizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        
      
     <div>
-      <p>Somos un <strong>Instituto</strong> formado por profesionales que desde 2018 brindan su conocimiento para que puedas aprender el idioma mas solicitado del mercado<br>brindamos clases online,personalizadas, que podes hacer solo/a o en grupos laborales
+      <p>Somos un Instituto formado por profesionales que desde 2018 brindan su conocimiento para que puedas aprender el idioma mas solicitado del mercado<br>brindamos clases online,personalizadas, que podes hacer solo/a o en grupos laborales
         <br>Todo el material provisto con posibilidad de cursos intensivos!<br>Donde quieras que estes contas con Faith Institute!</p>
     </div>
 
